htick 0.03
----------

----- cvs ci ------
Georgi (patch from Nestyurkin Nikolay, 2:5020/3600):
Sat Jan 22 15:38:40 2000
* added support tokens FileDescPos and FileLDescString
Georgi:
* fixed segmentation fault if field Desc in TIC > 255 chars

----- cvs ci ------
max(patch from Srguei Revtov):
Sun Jan 16 17:21:40 NOVT 2000
* recode under NT (Alex Bronin 2:5049/36)
* fixed \r\r\n under NT

----- cvs ci ------
max:
Mon Jan  3 21:21:59 NOVT 2000
* manual -> mandatory

----- cvs ci ------
Sat Dec 18 19:26:50 1999 
Georgi (patch from Alex Semenyaka, 2:461/640):
* fixed bug in AreaFix (%HELP)

----- cvs ci ------
Sat Dec 12 22:51:00 1999 
mrd:
* fixed bug with removing files from passthrough fileechos
  holded for busy links

----- cvs ci ------
Sat Dec 11 19:40:20 1999 
Georgi (patch from Nestyurkin Nikolay, 2:5020/3600):
* added token fileEchoFlavour (flavour for fileecho)
  Warning, please put this token in config, if you use htick!

----- cvs ci ------
mtt:
* remove strLower from htick, because its in fidoconfig
	
----- cvs ci ------
Tue Nov 30 22:13:00 1999
sms:
* fixed some misuses of ++ in areafix.c


htick 0.02
(released on Tue Nov 09 09:23:00 CEST 1999)
----------

----- cvs ci ------
Sun Nov 07 15:30:00 1999
georgi:
+ Added support fowrardPkts for TIC

----- cvs ci ------
Thu Oct 16 13:40:00 MET DST 1999
sms:
- reorganized Makefiles, please read README.Makefiles in the husky-common
  package!

----- cvs ci ------	
Wed Oct 13 09:27:01 CEST 1999 
mtt:
- fixed typo

----- cvs ci ------
Thu Aug 11 22:02:14 NOVST 1999
max:
* win32 porting

----- cvs ci ------
Thu Aug 05 13:40:05 1999
Georgi:
* bugfix in %resend

Sat Jul 31 00:44:05 1999
Georgi:
* Added "-lw <level>" and "-lr <level>" in filearea options

----- cvs ci ------
Sun Jul 25 21:17:54 NOVST 1999
max:
* small bugfix (if no passFileAreaDir in config -> core dump)

Sun Jul 25 21:11:45 1999
Georgi:
* change in "htick filelist"

Sat Jul 24 10:01:25 1999
Georgi:
* security check for %resend